--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!--Akhir Contact-->
     <!--footer-->
     <footer class="bg-primary text-center pb-4" >
-        <p>Creates with love by<a href="https://www.instagram.com/chrissyakhara/" class="text-white">Chrissya Kharra</a></p>
+        <p>Creates with love by<a href="https://www.instagram.com/chrissyakhara/" class="text-white">Chrissya Khara</a></p>
     </footer>
     <!--Akhir footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
